[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Shizennoki/Shizennoki_Hatchling.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Test_Level.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=3]

[node name="Test_Level" type="Node2D"]
script = ExtResource( 2 )
debug_draw_width = 50

[node name="PlayerStartPos" type="Position2D" parent="."]

[node name="CameraStartPos" type="Position2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 10, 10 )
script = ExtResource( 3 )

[node name="DrawTimer" type="Timer" parent="."]
wait_time = 0.025

[connection signal="timeout" from="DrawTimer" to="." method="_on_DrawTimer_timeout"]
